Fixing the 'header images stretching' issue

--- a/docs/_static/styles/components/_showcase_panel.scss
+++ b/docs/_static/styles/components/_showcase_panel.scss
@@ -23,8 +23,9 @@
 
         & > img {
             position: absolute;
-            min-width: 100%;
             min-height: 100%;
+            width: auto;
+            object-fit: cover;
             user-select: none;
         }
 
